Routes Changelog
================

Release 1.11 (**tip**)
======================
* Mapper controller_scan argument now handles None, and lists of controller
  names in addition to a callable.
* Route object now takes a name parameter, which is the name it responds to.
  This name is automatically added when called by using Mapper's connect
  class method.
* Added optional LRU object for use with Routes when URL's change too often
  for the Routes urlcache dict to be a viable option.

Release 1.10.3 (February 8, 2009)
=================================
* Tweak to use WebOb Request rather than Paste.
* Performance tweaks for URL recognition.
* Bugfix for routes.middleware not re.escaping the path_info before moving it
  to the script name.

Release 1.10.2 (January 11, 2009)
=================================
* Bugfix for unicode encoding problems with non-minimized Route generation.
  Spotted by Wichert Akkerman.
* Bugfix for when environ is {} in unit tests.

Release 1.10.1 (September 27, 2008)
===================================
* Removing LRU cache due to performance and threading issues. Cache does hit
  a max-size for the given routes.

Release 1.10 (September 24, 2008)
=================================
* Adding LRU cache instead of just dict for caching generated routes. This
  avoids slow memory leakage over long-running and non-existent route
  generation.
* Adding URLGenerator object.
* Adding redirect routes.
* Static routes can now interpolate variable parts in the path if using {}
  variable part syntax.
* Added sub_domain condition option to accept False or None, to require that
  there be no sub-domain provided for the route to match.

Release 1.9.2 (July 8, 2008)
============================
* Fixed bug in url_for which caused it to return a literal when it shouldn't
  have.

Release 1.9.1 (June 28, 2008)
=============================
* Fixed bug in formatted route recognition with formatting being absorbed
  into the id.

Release 1.9 (June 12, 2008)